<resources>
    <string name="app_name">Agenda Telefonica</string>
    <string name="user">Usuário:</string>
    <string name="password">Senha:</string>
    <string name="addAccount">Criar Conta</string>
    <string name="login">Entrar</string>
    <string name="exampleEmail">exemplo@email.com</string>
    <string name="passwordConf">Confirmar senha:</string>
    <string name="passwordHint">(minimo 8 caracteres)</string>
    <string name="passwordError">As senhas nao sao iguais!!</string>
    <string name="passwordError2">A senha tem menos que 8 caracteres!</string>
    <string name="addUserError">Usuario ja existe!</string>
    <string name="wait">Aguarde...</string>
    <string name="loginError">Usuario ou senha incorreta!</string>
    <string name="addContact">Criar Contato</string>
    <string name="emailObl">Email*</string>
    <string name="nameObl">Nome*</string>
    <string name="phoneOlb">Telefone*</string>
    <string name="phoneHint">Numero com DDD...</string>
    <string name="birth">Data de nascimento</string>
    <string name="birthHint">Nascimento (DD/MM/AAAA)</string>
    <string name="url">URL Imagem</string>
    <string name="urlHint">Endereco URL da imagem...</string>
    <string name="contactExistent">Contato ja existe!</string>
    <string name="invalidContact">Erro ao criar contato. Verifique se os campos obligatorios estao corretos.</string>
</resources>
