<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    tools:context=".view.AddContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/nameObl"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nameEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Nome do novo contato..."
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/emailObl"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/emailEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/exampleEmail"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/phoneOlb"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/phoneEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phoneHint"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/birth"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/birthEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/birthHint"
                android:inputType="date" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/url"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/pictureEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/urlHint"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/addBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="18dp"
                android:background="@color/colorAccent"
                android:text="@string/addContact"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>